--- a/areas/cpumap/cpumap03-optimizations.org
+++ b/areas/cpumap/cpumap03-optimizations.org
@@ -13,24 +13,19 @@
     - [[#baseline-redirect-udpnoports-3180074][baseline-redirect: UdpNoPorts: 3,180,074]]
     - [[#baseline-redirect-iptables-raw-drop-6193534][baseline-redirect: iptables-raw drop: 6,193,534]]
 - [[#patch-descriptions--benchmarks][Patch descriptions + benchmarks]]
-  - [[#patch-bpf-cpumap-use-ptr_ring_consume_batched][Patch: bpf: cpumap use ptr_ring_consume_batched]]
-    - [[#description][description]]
+  - [[#patch1-bpf-cpumap-use-ptr_ring_consume_batched][Patch1: bpf: cpumap use ptr_ring_consume_batched]]
     - [[#redirect-udpnoports-3327729][redirect: UdpNoPorts: 3,327,729]]
     - [[#redirect-iptables-raw-drop-6321540][redirect: iptables-raw drop: 6,321,540]]
-  - [[#patch-net-core-introduce-build_skb_around][Patch: net: core: introduce build_skb_around]]
-    - [[#description-1][description]]
+  - [[#patch2-net-core-introduce-build_skb_around][Patch2: net: core: introduce build_skb_around]]
     - [[#redirect-udpnoports-3221303][redirect: UdpNoPorts: 3,221,303]]
     - [[#redirect-iptables-raw-drop-6320066][redirect: iptables-raw drop: 6,320,066]]
-  - [[#patch-bpf-cpumap-do-bulk-allocation-of-skbs][Patch: bpf: cpumap do bulk allocation of SKBs]]
-    - [[#description-2][description]]
+  - [[#patch3-bpf-cpumap-do-bulk-allocation-of-skbs][Patch3: bpf: cpumap do bulk allocation of SKBs]]
     - [[#redirect-udpnoports-3290563][redirect: UdpNoPorts: 3,290,563]]
     - [[#redirect-iptables-raw-drop-6650112][redirect: iptables-raw drop: 6,650,112]]
-  - [[#patch-bpf-cpumap-memory-prefetchw-optimizations-for-struct-page][Patch: bpf: cpumap memory prefetchw optimizations for struct page]]
-    - [[#description-3][description]]
+  - [[#patch4-bpf-cpumap-memory-prefetchw-optimizations-for-struct-page][Patch4: bpf: cpumap memory prefetchw optimizations for struct page]]
     - [[#redirect-udpnoports-3520250][redirect: UdpNoPorts: 3,520,250]]
     - [[#redirect-iptables-raw-drop-7649604][redirect: iptables-raw drop: 7,649,604]]
-  - [[#patch-bpf-cpumap-use-netif_receive_skb_list][Patch: bpf: cpumap use netif_receive_skb_list]]
-    - [[#description-4][description]]
+  - [[#patch5-bpf-cpumap-use-netif_receive_skb_list][Patch5: bpf: cpumap use netif_receive_skb_list]]
     - [[#redirect-udpnoports-3303269][redirect: UdpNoPorts: 3,303,269]]
     - [[#redirect-iptables-raw-drop-7160297][redirect: iptables-raw drop: 7,160,297]]
 
@@ -256,8 +251,8 @@ $ perf stat -C4 -e cycles -e  instructions -e cache-references -e cache-misses -
 
 5.1.0-rc4-bpf-next-cpumap-SKB-bulk+
 
-** Patch: bpf: cpumap use ptr_ring_consume_batched
-*** description
+** Patch1: bpf: cpumap use ptr_ring_consume_batched
+*** description                                                  :noexport:
 
 Move ptr_ring dequeue outside loop, that allocate SKBs and calls network
 stack, as these operations that can take some time. The ptr_ring is a
@@ -339,8 +334,8 @@ $ perf stat -C4 -e cycles -e  instructions -e cache-references -e cache-misses -
         1,00105277 +- 0,00000961 seconds time elapsed  ( +-  0,00% )
 #+end_example
 
-** Patch: net: core: introduce build_skb_around
-*** description
+** Patch2: net: core: introduce build_skb_around
+*** description                                                  :noexport:
 The function build_skb() also have the responsibility to allocate and clear
 the SKB structure. Introduce a new function build_skb_around(), that moves
 the responsibility of allocation and clearing to the caller. This allows
@@ -377,8 +372,8 @@ cpumap_kthread  total   6,320,066      0           0
 redirect_err    total   0              0          
 #+end_example
 
-** Patch: bpf: cpumap do bulk allocation of SKBs
-*** description
+** Patch3: bpf: cpumap do bulk allocation of SKBs
+*** description                                                  :noexport:
 As cpumap now batch consume xdp_frame's from the ptr_ring, it knows how many
 SKBs it need to allocate. Thus, lets bulk allocate these SKBs via
 kmem_cache_alloc_bulk() API, and use the previously introduced function
@@ -467,8 +462,8 @@ Sampling:
 perf record -g -e cycles:pp,cpu/event=0xd1,umask=0x4,name=L3_Bound_MEM_LOAD_UOPS_RETIRED_L3_HIT,period=50021/pp,cpu/event=0x79,umask=0x30,name=Microcode_Sequencer_IDQ_MS_UOPS,period=2000003/,cpu/event=0x79,umask=0x30,edge=1,cmask=1,name=MS_Switches_IDQ_MS_SWITCHES,period=2000003/ -o perf.data --cpu 4 -a
 #+end_example
 
-** Patch: bpf: cpumap memory prefetchw optimizations for struct page
-*** description
+** Patch4: bpf: cpumap memory prefetchw optimizations for struct page
+*** description                                                  :noexport:
 A lot of the performance gain comes from this patch.
 
 While analysing performance overhead it was found that the largest CPU
@@ -563,9 +558,8 @@ perf record -g -e cycles:pp,cpu/event=0xd1,umask=0x4,name=L3_Bound_MEM_LOAD_UOPS
 #+end_example
 
 
-** Patch: bpf: cpumap use netif_receive_skb_list
-
-*** description
+** Patch5: bpf: cpumap use netif_receive_skb_list
+*** description                                                  :noexport:
 Reduce BH-disable period further by moving cpu_map_build_skb()
 outside/before invoking the network stack. And build up a skb_list that is
 used for netif_receive_skb_list. This is also an I-cache optimization.
